Fix alignment on header flex

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -31,6 +31,8 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
   font-weight: bold;
   font-size: large;
 }
